--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-inverse">
             <div class="container">
                 <div class="col-lg-6 col-md-8 col-sm-12 col-xs-12 col-centered">
-                    <a href="index.html">
+                    <a href="/">
                         <img src="./assets/img/cflogo.png" alt="logo" />
                         <h1>اینترنت برای همه؛ یا هیچ‌کس!</h1>
                     </a>
@@ -42,7 +42,7 @@
             <div class="col-lg-6 col-md-8 col-sm-12 col-xs-12 col-centered">
                 <ul class="nav nav-tabs">
                     <li class="active">
-                        <a href="index.html">معرفی</a>
+                        <a href="/">معرفی</a>
                     </li>
                     <li>
                         <a href="tools.html">ابزارها</a>
