--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         >Oblivion</a
                     >،
                     <a
-                        href="https://github.com/bepass-org/oblivion-desktop"
+                        href="https://github.com/bepass-org/oblivion-desktop/releases/latest#download"
                         title="Oblivion Desktop"
                         target="_blank"
                         >Oblivion Desktop</a
