--- a/tools.html
+++ b/tools.html
@@ -61,7 +61,7 @@
                         <a href="list.html">آی‌پی تمیز</a>
                     </li>
                     <li>
-                        <a href="list.html">نرم‌افزارها</a>
+                        <a href="software.html">نرم‌افزارها</a>
                     </li>
                     <li>
                         <a
