--- a/software.html
+++ b/software.html
@@ -379,7 +379,7 @@
                                 </li>
                                 <li>
                                     <a
-                                        href="https://github.com/bepass-org/oblivion-desktop/releases/latest"
+                                        href="https://github.com/bepass-org/oblivion-desktop/releases/latest#download"
                                         target="_blank"
                                         >Oblivion <small>Desktop</small></a
                                     >
