--- a/tools.html
+++ b/tools.html
@@ -90,7 +90,7 @@
                         >
                     </li>
                     <li>
-                        <a href="list.html">لینک‌باکس</a>
+                        <a href="linkbox.html">لینک‌باکس</a>
                     </li>
                     <li>
                         <a href="https://scanner.github1.cloud/" target="_blank"
