--- a/tools.html
+++ b/tools.html
@@ -5,7 +5,7 @@
         <link href="./assets/css/bootstrap-rtl.min.css" rel="stylesheet" />
         <link href="./assets/css/vazir.css" rel="stylesheet" />
         <link href="./assets/css/style.css?v1.53" rel="stylesheet" />
-        <title>CloudFlare | ابزارهای دورزدن فیلترینگ</title>
+        <title>IRCF | ابزارهای دورزدن فیلترینگ</title>
         <meta
             name="description"
             content="آی پی سالم و تمیز برای کلودفلر (کلادفلر) جهت دسترسی به اینترنت آزاد"
