--- a/software.html
+++ b/software.html
@@ -5,7 +5,7 @@
         <link href="./assets/css/bootstrap-rtl.min.css" rel="stylesheet" />
         <link href="./assets/css/vazir.css" rel="stylesheet" />
         <link href="./assets/css/style.css?v1.50" rel="stylesheet" />
-        <title>CloudFlare | نرم افزارها و پنل‌های دور زدن فیلترینگ</title>
+        <title>IRCF | نرم افزارها و پنل‌های دور زدن فیلترینگ</title>
         <meta
             name="description"
             content="آی پی سالم و تمیز برای کلودفلر (کلادفلر) جهت دسترسی به اینترنت آزاد"
