--- a/software.html
+++ b/software.html
@@ -349,6 +349,13 @@
                                 </li>
                                 <li>
                                     <a
+                                        href="https://github.com/lowercase78/V2RayN-PRO/releases/latest"
+                                        target="_blank"
+                                        >v2rayN-Pro</a
+                                    >
+                                </li>
+                                <li>
+                                    <a
                                         href="https://github.com/MatsuriDayo/nekoray"
                                         target="_blank"
                                         >nekoRay</a
