--- a/software.html
+++ b/software.html
@@ -201,6 +201,13 @@
                                 </li>
                                 <li>
                                     <a
+                                        href="https://github.com/Begzar/BegzarApp/releases/latest"
+                                        target="_blank"
+                                        >Begzar</a
+                                    >
+                                </li>
+                                <li>
+                                    <a
                                         href="https://play.google.com/store/apps/details?id=com.napsternetlabs.napsternetv&hl=de"
                                         target="_blank"
                                         >NapsternetV</a
