--- a/software.html
+++ b/software.html
@@ -208,6 +208,13 @@
                                 </li>
                                 <li>
                                     <a
+                                        href="https://github.com/davudsedft/purlite/releases/latest"
+                                        target="_blank"
+                                        >Purlite</a
+                                    >
+                                </li>
+                                <li>
+                                    <a
                                         href="https://play.google.com/store/apps/details?id=com.napsternetlabs.napsternetv&hl=de"
                                         target="_blank"
                                         >NapsternetV</a
