--- a/software.html
+++ b/software.html
@@ -261,6 +261,23 @@
                                     >
                                 </li>
                                 <li>
+                                    <a
+                                        href="https://apps.apple.com/us/app/hiddify-proxy-vpn/id6596777532"
+                                        target="_blank"
+                                        >Hiddify</a
+                                    >
+                                    <a
+                                        href="https://github.com/hiddify/hiddify-next/releases/latest"
+                                        target="_blank"
+                                    >
+                                        <img
+                                            src="./assets/img/github.png"
+                                            alt="github"
+                                            class="gitIcon"
+                                        />
+                                    </a>
+                                </li>
+                                <li>
                                     <small class="text-muted">
                                         <del>WingsX</del>
                                     </small>
