--- a/software.html
+++ b/software.html
@@ -262,7 +262,7 @@
                                 </li>
                                 <li>
                                     <a
-                                        href="https://apps.apple.com/us/app/hiddify-proxy-vpn/id6596777532"
+                                        href="https://apps.apple.com/us/app/hiddify-proxy-vpn/id6596777532?platform=iphone"
                                         target="_blank"
                                         >Hiddify</a
                                     >
