--- a/contacts.html
+++ b/contacts.html
@@ -1,199 +1,200 @@
 <!DOCTYPE html>
 <html lang="fa">
-    <head>
-        <link href="./assets/css/bootstrap.min.css" rel="stylesheet" />
-        <link href="./assets/css/bootstrap-rtl.min.css" rel="stylesheet" />
-        <link href="./assets/css/vazir.css" rel="stylesheet" />
-        <link href="./assets/css/style.css?v1.50" rel="stylesheet" />
-        <title>IRCF | تماس</title>
-        <meta
-            name="description"
-            content="آی پی سالم و تمیز برای کلودفلر (کلادفلر) جهت دسترسی به اینترنت آزاد"
-        />
-        <meta
-            name="keywords"
-            content="کلودفلر, کلادفلر, cloudflare, cf, آی پی تمیز, آی پی سالم, اسکن آی پی"
-        />
-        <meta name="robots" content="index,follow,noodp" />
-        <meta name="googlebot" content="index,follow" />
-        <meta name="theme-color" content="#ff7900" />
-        <script src="./assets/js/jquery.min.js"></script>
-        <script src="./assets/js/bootstrap.min.js"></script>
-        <script src="./assets/js/script.js"></script>
-        <meta charset="UTF-8" />
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="icon" type="image/x-icon" href="./assets/favicon.ico?v1.1" />
-    </head>
-    <body>
-        <nav class="navbar navbar-inverse">
-            <div class="container">
-                <div class="col-lg-6 col-md-8 col-sm-12 col-xs-12 col-centered">
-                    <a href="/">
-                        <img src="./assets/img/cflogo.png?v1.1" alt="logo" />
-                        <h1>اینترنت برای همه؛ یا هیچ‌کس!</h1>
-                    </a>
-                </div>
-            </div>
-        </nav>
+  <head>
+    <link href="./assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="./assets/css/bootstrap-rtl.min.css" rel="stylesheet" />
+    <link href="./assets/css/vazir.css" rel="stylesheet" />
+    <link href="./assets/css/style.css?v1.50" rel="stylesheet" />
+    <title>IRCF | تماس</title>
+    <meta
+      name="description"
+      content="آی پی سالم و تمیز برای کلودفلر (کلادفلر) جهت دسترسی به اینترنت آزاد"
+    />
+    <meta
+      name="keywords"
+      content="کلودفلر, کلادفلر, cloudflare, cf, آی پی تمیز, آی پی سالم, اسکن آی پی"
+    />
+    <meta name="robots" content="index,follow,noodp" />
+    <meta name="googlebot" content="index,follow" />
+    <meta name="theme-color" content="#ff7900" />
+    <script src="./assets/js/jquery.min.js"></script>
+    <script src="./assets/js/bootstrap.min.js"></script>
+    <script src="./assets/js/script.js"></script>
+    <meta charset="UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.ico?v1.1" />
+    <script>
+      window.addEventListener("load", function () {
+        if (window.location.href.endsWith("#donate")) {
+          $("#donate").modal("show");
+        }
+      });
+    </script>
+  </head>
+  <body>
+    <nav class="navbar navbar-inverse">
+      <div class="container">
+        <div class="col-lg-6 col-md-8 col-sm-12 col-xs-12 col-centered">
+          <a href="/">
+            <img src="./assets/img/cflogo.png?v1.1" alt="logo" />
+            <h1>اینترنت برای همه؛ یا هیچ‌کس!</h1>
+          </a>
+        </div>
+      </div>
+    </nav>
+    <div class="clearfix"></div>
+    <div class="container">
+      <div class="col-lg-6 col-md-8 col-sm-12 col-xs-12 col-centered">
+        <ul class="nav nav-tabs">
+          <li>
+            <a href="/">معرفی</a>
+          </li>
+          <li>
+            <a href="tools.html">ابزارها</a>
+          </li>
+          <li class="pull-left active">
+            <a href="contacts.html">تماس‌باما</a>
+          </li>
+        </ul>
         <div class="clearfix"></div>
-        <div class="container">
-            <div class="col-lg-6 col-md-8 col-sm-12 col-xs-12 col-centered">
-                <ul class="nav nav-tabs">
-                    <li>
-                        <a href="/">معرفی</a>
-                    </li>
-                    <li>
-                        <a href="tools.html">ابزارها</a>
-                    </li>
-                    <li class="pull-left active">
-                        <a href="contacts.html">تماس‌باما</a>
-                    </li>
-                </ul>
-                <div class="clearfix"></div>
-                <br />
-                <p>
-                    راه ارتباطی مستقیم درحال‌حاضر
-                    <a href="mailto:ircfspace@gmail.com">آدرس ایمیل</a>
-                    هست؛ اما بروزرسانی‌های این‌سرویس و یه‌سری از آموزش‌های
-                    کاربردی رو
-                    <a href="https://t.me/ircfspace" target="_blank"
-                        >از طریق تلگرام</a
-                    >
-                    یا
-                    <a href="https://twitter.com/ircfspace" target="_blank"
-                        >توئیتر</a
-                    >
-                    باهاتون به اشتراک خواهیم گذاشت.
-                </p>
-                <div class="clearfix"></div>
-                <ul>
-                    <li>
-                        <a href="mailto:ircfspace@gmail.com"> آدرس ایمیل </a>
-                    </li>
-                    <li>
-                        <a href="https://t.me/ircfspace" target="_blank">
-                            کانال تلگرام ircfspace@
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://twitter.com/ircfspace" target="_blank">
-                            صفحه توییتر ircfspace@
-                        </a>
-                    </li>
-                </ul>
-                <div class="clearfix"></div>
-                <hr />
-                <p>
-                    درصورتی‌که خدمات ارائه‌شده براتون مفید بوده، می‌تونین از
-                    طریق روش‌های زیر مشارکت کرده و به افزایش کیفیت و پایداری
-                    IRCF کمک کنین:
-                </p>
-                <ul>
-                    <li>
-                        معرفی و
-                        <a
-                            href="https://twitter.com/share?text=%D8%A2%DB%8C%E2%80%8C%D9%BE%DB%8C%E2%80%8C%D9%87%D8%A7%DB%8C+%D8%AA%D9%85%DB%8C%D8%B2+%DA%A9%D9%84%D9%88%D8%AF%D9%81%D9%84%D8%B1+%D8%A8%D8%B1%D8%A7%DB%8C+%D8%AF%D8%B3%D8%AA%D8%B1%D8%B3%DB%8C+%D8%A8%D9%87+%23%D8%A7%DB%8C%D9%86%D8%AA%D8%B1%D9%86%D8%AA_%D8%A2%D8%B2%D8%A7%D8%AF%0A%0A%40ircfspace%0A&url=https://ircf.space"
-                            target="_blank"
-                            >اشتراک‌گذاری با سایرین</a
-                        >
-                    </li>
-                    <!-- <li>
+        <br />
+        <p>
+          راه ارتباطی مستقیم درحال‌حاضر
+          <a href="mailto:ircfspace@gmail.com">آدرس ایمیل</a>
+          هست؛ اما بروزرسانی‌های این‌سرویس و یه‌سری از آموزش‌های کاربردی رو
+          <a href="https://t.me/ircfspace" target="_blank">از طریق تلگرام</a>
+          یا
+          <a href="https://twitter.com/ircfspace" target="_blank">توئیتر</a>
+          باهاتون به اشتراک خواهیم گذاشت.
+        </p>
+        <div class="clearfix"></div>
+        <ul>
+          <li>
+            <a href="mailto:ircfspace@gmail.com"> آدرس ایمیل </a>
+          </li>
+          <li>
+            <a href="https://t.me/ircfspace" target="_blank">
+              کانال تلگرام ircfspace@
+            </a>
+          </li>
+          <li>
+            <a href="https://twitter.com/ircfspace" target="_blank">
+              صفحه توییتر ircfspace@
+            </a>
+          </li>
+        </ul>
+        <div class="clearfix"></div>
+        <hr />
+        <p>
+          درصورتی‌که خدمات ارائه‌شده براتون مفید بوده، می‌تونین از طریق روش‌های
+          زیر مشارکت کرده و به افزایش کیفیت و پایداری IRCF کمک کنین:
+        </p>
+        <ul>
+          <li>
+            معرفی و
+            <a
+              href="https://twitter.com/share?text=%D8%A2%DB%8C%E2%80%8C%D9%BE%DB%8C%E2%80%8C%D9%87%D8%A7%DB%8C+%D8%AA%D9%85%DB%8C%D8%B2+%DA%A9%D9%84%D9%88%D8%AF%D9%81%D9%84%D8%B1+%D8%A8%D8%B1%D8%A7%DB%8C+%D8%AF%D8%B3%D8%AA%D8%B1%D8%B3%DB%8C+%D8%A8%D9%87+%23%D8%A7%DB%8C%D9%86%D8%AA%D8%B1%D9%86%D8%AA_%D8%A2%D8%B2%D8%A7%D8%AF%0A%0A%40ircfspace%0A&url=https://ircf.space"
+              target="_blank"
+              >اشتراک‌گذاری با سایرین</a
+            >
+          </li>
+          <!-- <li>
                         <a href="https://t.me/ircfspace/72" target="_blank"
                             >مشارکت</a
                         >
                         در جمع‌آوری آی‌پی‌های تمیز
                     </li> -->
-                    <li>
-                        <a href="#" data-toggle="modal" data-target="#donate"
-                            ><b>دونیت</b></a
-                        >، با خریدن یک فنجان قهوه
-                    </li>
-                </ul>
-                <div id="donate" class="modal fade" role="dialog">
-                    <div class="modal-dialog modal-sm">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h4 class="modal-title">دونیت</h4>
-                            </div>
-                            <div class="modal-body modalBodyOverflow">
-                                <p>
-                                    درصورت تمایل برای دونیت می‌تونین از یکی‌از
-                                    روش‌های زیر استفاده کنین:
-                                </p>
-                                <div class="dirLeft">
-                                    <small>Buy me a coffee:</small>
-                                    <br />
-                                    <a
-                                        href="https://buymeacoffee.com/ircf"
-                                        class="btn btn-default btn-block"
-                                        target="_blank"
-                                        >buymeacoffee.com/ircf</a
-                                    >
-                                    <br />
-                                    <small>Tether (TRC20):</small>
-                                    <br />
-                                    <input
-                                        type="text"
-                                        class="form-control text-center"
-                                        value="TF5cT8fQMuajHGGH141U9JbTygFojkrFdB"
-                                    />
-                                    <br />
-                                    <small>Bitcoin:</small>
-                                    <br />
-                                    <input
-                                        type="text"
-                                        class="form-control text-center"
-                                        value="bc1qyhx0qn9722vdvlz4s64g4sxq3yne0f5ryz3jyd"
-                                    />
-                                    <br />
-                                    <small>Tron (TRX):</small>
-                                    <br />
-                                    <input
-                                        type="text"
-                                        class="form-control text-center"
-                                        value="TF5cT8fQMuajHGGH141U9JbTygFojkrFdB"
-                                    />
-                                    <br />
-                                    <small>Ethereum:</small>
-                                    <br />
-                                    <input
-                                        type="text"
-                                        class="form-control text-center"
-                                        value="0x2A72777912A15A6387a1116f9bDDFe1Cb9474BF1"
-                                    />
-                                    <br />
-                                    <small>Litecoin:</small>
-                                    <br />
-                                    <input
-                                        type="text"
-                                        class="form-control text-center"
-                                        value="ltc1q5d4u366xef336pjvccn7akn02upavmk45fhtdw"
-                                    />
-                                    <br />
-                                    <small>TON (ERC20):</small>
-                                    <br />
-                                    <input
-                                        type="text"
-                                        class="form-control text-center"
-                                        value="0x2A72777912A15A6387a1116f9bDDFe1Cb9474BF1"
-                                    />
-                                </div>
-                            </div>
-                            <div class="modal-footer">
-                                <button
-                                    type="button"
-                                    class="btn btn-default"
-                                    data-dismiss="modal"
-                                >
-                                    حله
-                                </button>
-                            </div>
-                        </div>
-                    </div>
+          <li>
+            <a href="#donate" data-toggle="modal" data-target="#donate"
+              ><b>دونیت</b></a
+            >، با خریدن یک فنجان قهوه
+          </li>
+        </ul>
+        <div id="donate" class="modal fade" role="dialog">
+          <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h4 class="modal-title">دونیت</h4>
+              </div>
+              <div class="modal-body modalBodyOverflow">
+                <p>
+                  درصورت تمایل برای دونیت می‌تونین از یکی‌از روش‌های زیر استفاده
+                  کنین:
+                </p>
+                <div class="dirLeft">
+                  <!-- <small>Buy me a coffee:</small>
+                  <br />
+                  <a
+                    href="https://buymeacoffee.com/ircf"
+                    class="btn btn-default btn-block"
+                    target="_blank"
+                    >buymeacoffee.com/ircf</a
+                  >
+                  <br /> -->
+                  <small>Tron (TRX):</small>
+                  <br />
+                  <input
+                    type="text"
+                    class="form-control text-center"
+                    value="TSDeNbcSGHiGgRttBX3ur4KZtu4WAw9LB2"
+                  />
+                  <br />
+                  <small>Tether (TRC20):</small>
+                  <br />
+                  <input
+                    type="text"
+                    class="form-control text-center"
+                    value="TSDeNbcSGHiGgRttBX3ur4KZtu4WAw9LB2"
+                  />
+                  <br />
+                  <small>Bitcoin:</small>
+                  <br />
+                  <input
+                    type="text"
+                    class="form-control text-center"
+                    value="bc1qvv47dldgapdy43fptfp9g82fzjv7c263s0dvw3"
+                  />
+                  <br />
+                  <small>Ethereum:</small>
+                  <br />
+                  <input
+                    type="text"
+                    class="form-control text-center"
+                    value="0x3F5AE1F173161f2cD547d037171de3076770f3b0"
+                  />
+                  <br />
+                  <small>Litecoin:</small>
+                  <br />
+                  <input
+                    type="text"
+                    class="form-control text-center"
+                    value="ltc1qan02jmyx3q77cq7k7ngc985kn57292hz5dykpu"
+                  />
+                  <br />
+                  <small>TON:</small>
+                  <br />
+                  <input
+                    type="text"
+                    class="form-control text-center"
+                    value="UQAlqPQBwlRT5nqvdbH--nLVeat-Mc5SmDZccghfo7ZYVVjF"
+                  />
                 </div>
+              </div>
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-default"
+                  data-dismiss="modal"
+                >
+                  حله
+                </button>
+              </div>
             </div>
+          </div>
         </div>
-    </body>
+      </div>
+    </div>
+  </body>
 </html>
