--- a/software.html
+++ b/software.html
@@ -85,6 +85,13 @@
                                     >مرزبان</a
                                 >
                             </li>
+                            <li>
+                                <a
+                                    href="https://github.com/marzneshin/marzneshin"
+                                    target="_blank"
+                                    >مرزنشین</a
+                                >
+                            </li>
                         </ul>
                     </li>
                 </ul>
