--- a/software.html
+++ b/software.html
@@ -92,6 +92,13 @@
                                     >مرزنشین</a
                                 >
                             </li>
+                            <li>
+                                <a
+                                    href="https://github.com/bia-pain-bache/BPB-Worker-Panel"
+                                    target="_blank"
+                                    >پنل BPB</a
+                                >
+                            </li>
                         </ul>
                     </li>
                 </ul>
