--- a/software.html
+++ b/software.html
@@ -96,7 +96,7 @@
                                 <a
                                     href="https://github.com/bia-pain-bache/BPB-Worker-Panel"
                                     target="_blank"
-                                    >پنل BPB</a
+                                    >BPB</a
                                 >
                             </li>
                         </ul>
