--- a/tools.html
+++ b/tools.html
@@ -85,7 +85,7 @@
                         >
                     </li>
                     <li>
-                        <a href="https://fragment.github1.cloud" target="_blank"
+                        <a href="https://ircfspace.github.io/fragment" target="_blank"
                             >ابزار فرگمنت</a
                         >
                     </li>
@@ -93,7 +93,7 @@
                         <a href="linkbox.html">لینک‌باکس</a>
                     </li>
                     <li>
-                        <a href="https://scanner.github1.cloud/" target="_blank"
+                        <a href="https://kiomarzsss.github.io/kscanner" target="_blank"
                             >اسکنر آنلاین</a
                         >
                     </li>
