--- a/tools.html
+++ b/tools.html
@@ -93,7 +93,7 @@
                         <a href="linkbox.html">لینک‌باکس</a>
                     </li>
                     <li>
-                        <a href="https://kiomarzsss.github.io/kscanner/?" target="_blank"
+                        <a href="https://cfscan.vercel.app" target="_blank"
                             >اسکنر آنلاین</a
                         >
                     </li>
