--- a/software.html
+++ b/software.html
@@ -222,6 +222,13 @@
                                 </li>
                                 <li>
                                     <a
+                                        href="https://github.com/Freedom-Guard/FG_MOBILE/releases/latest"
+                                        target="_blank"
+                                        >Freedom Guard</a
+                                    >
+                                </li>
+                                <li>
+                                    <a
                                         href="https://github.com/davudsedft/purlite/releases/latest"
                                         target="_blank"
                                         >Purlite</a
@@ -390,6 +397,20 @@
                                         href="https://github.com/lowercase78/V2RayN-PRO/releases/latest"
                                         target="_blank"
                                         >v2rayN-Pro</a
+                                    >
+                                </li>
+                                <li>
+                                    <a
+                                        href="https://github.com/Begzar/BegzarWindows/releases/latest"
+                                        target="_blank"
+                                        >Begzar</a
+                                    >
+                                </li>
+                                <li>
+                                    <a
+                                        href="https://github.com/Freedom-Guard/Freedom-Guard/releases/latest"
+                                        target="_blank"
+                                        >Freedom Guard</a
                                     >
                                 </li>
                                 <li>
