--- a/software.html
+++ b/software.html
@@ -452,6 +452,13 @@
                                 </li>
                                 <li>
                                     <a
+                                        href="https://github.com/Freedom-Guard/Freedom-Guard/releases/latest"
+                                        target="_blank"
+                                        >Freedom Guard</a
+                                    >
+                                </li>
+                                <li>
+                                    <a
                                         href="https://github.com/Qv2ray/Qv2ray"
                                         target="_blank"
                                         >Qv2ray</a
