--- a/software.html
+++ b/software.html
@@ -265,6 +265,13 @@
                                         >ARMod</a
                                     >
                                 </li>
+                                <li>
+                                    <a
+                                        href="https://play.google.com/store/apps/details?id=org.outline.android.client"
+                                        target="_blank"
+                                        >Outline</a
+                                    >
+                                </li>
                             </ul>
                         </li>
                     </ul>
@@ -350,6 +357,13 @@
                                         >WireGuard</a
                                     >
                                 </li>
+                                <li>
+                                    <a
+                                        href="https://apps.apple.com/us/app/outline-app/id1356177741"
+                                        target="_blank"
+                                        >Outline</a
+                                    >
+                                </li>
                             </ul>
                         </li>
                     </ul>
@@ -427,6 +441,13 @@
                                         >Qv2ray</a
                                     >
                                 </li>
+                                <li>
+                                    <a
+                                        href="https://getoutline.org/get-started#step-3"
+                                        target="_blank"
+                                        >Outline</a
+                                    >
+                                </li>
                             </ul>
                         </li>
                     </ul>
@@ -494,6 +515,13 @@
                                         href="https://apps.apple.com/us/app/v2box-v2ray-client/id6446814690?platform=mac"
                                         target="_blank"
                                         >V2Box</a
+                                    >
+                                </li>
+                                <li>
+                                    <a
+                                        href="https://getoutline.org/get-started#step-3"
+                                        target="_blank"
+                                        >Outline</a
                                     >
                                 </li>
                             </ul>
