--- a/software.html
+++ b/software.html
@@ -272,6 +272,20 @@
                                         >Outline</a
                                     >
                                 </li>
+                                <li>
+                                    <a
+                                        href="https://play.google.com/store/apps/details?id=com.psiphon3.subscription"
+                                        target="_blank"
+                                        >Psiphon</a
+                                    >
+                                </li>
+                                <li>
+                                    <a
+                                        href="https://play.google.com/store/apps/details?id=org.torproject.android"
+                                        target="_blank"
+                                        >Orbot</a
+                                    >
+                                </li>
                             </ul>
                         </li>
                     </ul>
@@ -364,6 +378,20 @@
                                         >Outline</a
                                     >
                                 </li>
+                                <li>
+                                    <a
+                                        href="https://apps.apple.com/app/psiphon/id1276263909"
+                                        target="_blank"
+                                        >Psiphon</a
+                                    >
+                                </li>
+                                <li>
+                                    <a
+                                        href="https://apps.apple.com/us/app/orbot/id1609461599"
+                                        target="_blank"
+                                        >Orbot</a
+                                    >
+                                </li>
                             </ul>
                         </li>
                     </ul>
@@ -446,6 +474,13 @@
                                         href="https://getoutline.org/get-started#step-3"
                                         target="_blank"
                                         >Outline</a
+                                    >
+                                </li>
+                                <li>
+                                    <a
+                                        href="https://psiphon.ca/psiphon3.exe"
+                                        target="_blank"
+                                        >Psiphon</a
                                     >
                                 </li>
                             </ul>
