--- a/software.html
+++ b/software.html
@@ -99,6 +99,13 @@
                                     >BPB</a
                                 >
                             </li>
+                            <li>
+                                <a
+                                    href="https://github.com/MHSanaei/3x-ui"
+                                    target="_blank"
+                                    >3X-UI</a
+                                >
+                            </li>
                         </ul>
                     </li>
                 </ul>
