--- a/software.html
+++ b/software.html
@@ -188,6 +188,23 @@
                                 </li>
                                 <li>
                                     <a
+                                        href="https://play.google.com/store/apps/details?id=de.unboundtech.defyxvpn&hl=en&gl=US"
+                                        target="_blank"
+                                        >Defyx VPN</a
+                                    >
+                                    <a
+                                        href="https://github.com/UnboundTechCo/defyxVPN/releases/latest"
+                                        target="_blank"
+                                    >
+                                        <img
+                                            src="./assets/img/github.png"
+                                            alt="github"
+                                            class="gitIcon"
+                                        />
+                                    </a>
+                                </li>
+                                <li>
+                                    <a
                                         href="https://play.google.com/store/apps/details?id=moe.matsuri.lite&hl=en&gl=US"
                                         target="_blank"
                                         >Matsuri</a
@@ -317,6 +334,23 @@
                                     >
                                     <a
                                         href="https://github.com/hiddify/hiddify-next/releases/latest"
+                                        target="_blank"
+                                    >
+                                        <img
+                                            src="./assets/img/github.png"
+                                            alt="github"
+                                            class="gitIcon"
+                                        />
+                                    </a>
+                                </li>
+                                <li>
+                                    <a
+                                        href="https://apps.apple.com/gb/app/defyx/id6746811872?platform=iphone"
+                                        target="_blank"
+                                        >Defyx VPN</a
+                                    >
+                                    <a
+                                        href="https://github.com/UnboundTechCo/defyxVPN/releases/latest"
                                         target="_blank"
                                     >
                                         <img
