--- a/software.html
+++ b/software.html
@@ -239,10 +239,20 @@
                                 </li>
                                 <li>
                                     <a
-                                        href="https://github.com/Begzar/BegzarApp/releases/latest"
+                                        href="https://play.google.com/store/apps/details?id=cloud.begzar.begzar"
                                         target="_blank"
                                         >Begzar</a
                                     >
+                                    <a
+                                        href="https://github.com/Begzar/BegzarApp/releases/latest"
+                                        target="_blank"
+                                    >
+                                        <img
+                                            src="./assets/img/github.png"
+                                            alt="github"
+                                            class="gitIcon"
+                                        />
+                                    </a>
                                 </li>
                                 <li>
                                     <a
